<resources>
    <string name="api_key">AIzaSyDcEEGrjxw712L4SX0oUWQ0Cgn3BKPAbGE</string>
    <string name="app_name">Calcetto</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nome</string>
    <string name="username">Username</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Registrati</string>
    <string name="date_time">Data e ora</string>
    <string name="participants">Partecipanti</string>
    <string name="notes">Note</string>
    <string name="non_sei_ancora_registrato_registrati">Non sei ancora registrato? Registrati</string>
    <string name="settingimage">Immagine delle impostazioni</string>
    <string name="prossime_partite">Prossime partite</string>
    <string name="immagine_del_logo_del_calcetto">Immagine del logo del Calcetto</string>
    <string name="logout">Logout</string>
    <string name="modifica_immagine">Modifica Immagine</string>
    <string name="immagine_del_profilo">Immagine del Profilo</string>
    <string name="sei_gi_registrato_accedi">Sei già registrato? Accedi</string>
    <string name="dettagli_partita">Dettagli partita</string>
    <string name="nome_match">Nome Match</string>
    <string name="ricevi_notifiche">Ricevi notifiche</string>
    <string name="partecipa">Partecipa</string>
    <string name="elimina_partita">Elimina Partita</string>
    <string name="luogo">Luogo</string>
    <string name="immagine_copertina_del_match">Immagine copertina del match</string>
    <string name="posti_liberi">Posti Liberi</string>
    <string name="ora">Ora</string>
    <string name="posti_disponibili">Posti disponibili</string>
    <string name="descrizione_e_note">Descrizione e Note</string>
    <string name="crea">Crea</string>
    <string name="nuova_partita">Nuova partita</string>
    <string name="data">Data</string>
    <string name="time">Time</string>
    <string name="year">Year</string>
    <string name="date">Date</string>
    <string name="salva">SALVA</string>
    <string name="modifica_profilo">Modifica profilo</string>
    <string name="notifiche_partite">Notifiche partite</string>
    <string name="logo_applicazione">Logo applicazione</string>
    <string name="city">Città</string>
    <string name="search">Cerca</string>
    <string name="icon_calendar">Icona calendario</string>
    <string name="icon_google_maps">Icona Google Maps</string>
</resources>
