<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:minHeight="140dp"
    android:orientation="horizontal"
    app:layout_constraintHeight_min="wrap"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".25"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Day"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:padding="2dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:padding="2dp"
            android:text="@string/year"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:padding="2dp"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".80"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_match_name_match"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/nome_match"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/tv_match_available"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/participants"
            android:textColor="@color/colorAccent"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/tv_match_notes"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/notes"
            android:textColor="@color/colorAccent"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

</LinearLayout>