<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:minHeight="40dp"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/match_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".33"
        android:padding="5dp"
        android:text="@string/date_time"
        android:textAlignment="center"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/match_available"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".33"
        android:padding="5dp"
        android:text="@string/participants"
        android:textAlignment="center"
        android:textColor="@color/colorTextButton"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/match_creator"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_weight=".33"
        android:padding="5dp"
        android:text="@string/notes"
        android:textAlignment="center"
        android:textColor="@color/colorTextButton"
        app:autoSizeTextType="uniform" />


</LinearLayout>