<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewMatchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".08"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <TextView
            android:id="@+id/new_match_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="2dp"
            android:paddingTop="17dp"
            android:paddingEnd="17dp"
            android:paddingBottom="17dp"
            android:text="@string/nuova_partita"
            android:textColor="@color/colorText"
            app:autoSizeTextType="uniform"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".25">

        <ImageView
            android:id="@+id/ImageMatchCopertina"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/immagine_copertina_del_match"
            android:paddingTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/calcio_pred" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ChangeImageMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="#000000"
            app:srcCompat="@drawable/ic_edit_black_48dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/nameMatch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight=".09"
        android:hint="@string/nome_match"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        android:textColorHint="#99000000"
        android:textSize="30sp"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight=".09"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".11"
            app:srcCompat="@drawable/datetimeico_nera" />

        <TextView
            android:id="@+id/newMatchDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight=".46"
            android:background="@drawable/underline_text_new_match"
            android:focusable="auto"
            android:hint="@string/data"
            android:inputType="date"
            android:textColor="@color/colorAccent"
            android:textColorHint="#99000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/newMatchTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".45"
            android:background="@drawable/underline_text_new_match"
            android:focusable="auto"
            android:hint="@string/ora"
            android:inputType="time"
            android:textColor="@color/colorAccent"
            android:textColorHint="#99000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight=".09"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".11"
            app:srcCompat="@drawable/maps_icon_gmm" />

        <TextView
            android:id="@+id/autocomplete_fragment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight=".89"
            android:background="@drawable/underline_text_new_match"
            android:hint="@string/luogo"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="#99000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight=".09"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".11"
            android:text="#"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <EditText
            android:id="@+id/availableSpots"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight=".89"
            android:autofillHints=""
            android:hint="@string/posti_disponibili"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textColorHint="#99000000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight=".09"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".11"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <EditText
            android:id="@+id/newMatchNotes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight=".89"
            android:autofillHints=""
            android:gravity="start|top"
            android:hint="@string/descrizione_e_note"
            android:inputType="textMultiLine"
            android:textColor="@color/colorAccent"
            android:textColorHint="#99000000"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/saveMatchButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight=".10"
        android:background="@color/colorButton"
        android:elegantTextHeight="false"
        android:text="@string/crea"
        android:textAlignment="center"
        android:textColor="@color/colorTextButton"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".04" />


</LinearLayout>